tests/baselines/reference/parserForStatement5.errors.txt
parserForStatement5.ts(1,12): error TS2304: Cannot find name 'b'.


==== parserForStatement5.ts (1 errors) ====
    for ({} in b) {
               ~
!!! error TS2304: Cannot find name 'b'.
    }